# colameta

./: .gitignore  AGENTS.md  FREEZE_CANDIDATE_REVIEW_PACKET.md  FREEZE_CANDIDATE_REVIEW_PACKET.zh-CN.md  PROJECT_MASTER_TASKBOOK.md  PROJECT_MASTER_TASKBOOK.zh-CN.md  README.md  README.zh-CN.md  chatgpt-app-submission.json  pyproject.toml
.colameta/: plan.json  plan.zh-CN.md
adapters/: codex_cli_adapter.py  codex_review_adapter.py  executor_process_supervisor.py  git_adapter.py  opencode_server_adapter.py  opencode_types.py  pi_rpc_adapter.py  shell_adapter.py
docs/: DEVELOPMENT_HISTORY.zh-CN.md  INSTALLATION_AND_DEPLOYMENT.md  INSTALLATION_AND_DEPLOYMENT.zh-CN.md  ONBOARDING.md  ONBOARDING.zh-CN.md  USAGE.md  USAGE.zh-CN.md  agent-consumer-contract.zh-CN.md  chatgpt-app-submission-materials.example.json  chatgpt-app-submission-materials.json  commander-public-response-minimization.md  connector-runtime-health-observability.md  dns-proxy-tunnel-runbook.zh-CN.md  jenn-private-operator-local-ipc-design.md  jenn-private-operator-local-ipc-negative-test-matrix.json  jenn-private-operator-negative-test-matrix.json  jenn-private-operator-protocol.md  managed-tunnel-service.md  platform-blocked-operator-handoff.md  privacy-policy.md  private-beta-systemd.md  production-operations-beta-gate.zh-CN.md  production-readiness-preflight.zh-CN.md  remote-https-mcp-service.md  runtime-loaded-code-verification.md  runtime-version-status-decision-contract.md  stable-promotion-readiness-packet.zh-CN.md  support.md  terms-of-use.md  web-gpt-service-entrypoint.zh-CN.md
runner/: _internal_utils.py  (+179 more)
(+525 files in other folders)
