[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "colameta"
version = "0.1.2"
description = "AI coding workflow harness connecting GPTs to local executors"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "禁止商业使用"}
keywords = ["ai", "coding", "workflow", "gpt", "mcp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "PyJWT[crypto]>=2.8,<3",
]

[project.urls]
Homepage = "https://github.com/riccilnl/colameta"

[project.scripts]
colameta = "scripts.runner_cli:main"

[project.optional-dependencies]
test = [
    "pytest>=9.0.3,<10",
    "setuptools>=68",
    "wheel>=0.43",
]
quality = [
    "bandit[toml]>=1.7,<2",
    "pip-audit>=2.7,<3",
    "pytest-cov>=5,<7",
    "ruff>=0.8,<1",
]

[tool.setuptools.packages.find]
include = ["runner", "runner.*", "adapters", "adapters.*", "schemas", "schemas.*", "scripts", "scripts.*"]

[tool.setuptools.package-data]
runner = ["py.typed"]

[tool.ruff]
target-version = "py310"
line-length = 120
extend-exclude = [".venv", "build", "dist", "*.egg-info"]

[tool.ruff.lint]
select = ["E9", "F63", "F7", "F82"]

[tool.bandit]
exclude_dirs = ["tests", ".venv", "build", "dist"]
